# Unreleased
- [change][minor] Try unlinking Unix sockets before binding them.
- [add][minor] `interface!(...)` now generates an `Interface` struct for introspection.
- [change][major] `interface!(...)` no longer generates a module for the created items.
- [impl][patch] The code generated by `interface!(...)` now suppresses some clippy warnings.