@@ -1,5 +1,6 @@
 # Unreleased
-- [change][minor] Try unlinking Unix sockets before binding them.
 - [add][minor] `interface!(...)` now generates an `Interface` struct for introspection.
 - [change][major] `interface!(...)` no longer generates a module for the created items.
+- [change][major] Allow access to unknown and invalid messages in generated interfaces.
+- [change][minor] Try unlinking Unix sockets before binding them.
 - [impl][patch] The code generated by `interface!(...)` now suppresses some clippy warnings.
